# CORE

./: .gitignore  README.md  biome.json  ecosystem.config.cjs  ecosystem.config.js  example.ts  index.ts  package.json  reference.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
ai/: engine.ts
cargo/: .gitignore  Cargo.toml
cargo/crates/: main.rs
cargo/crates/db/: up.sql
cargo/crates/lib/: indexer.rs  mod.rs  state.rs
data/: categories.ts
qdrant_storage/: raft_state.json
qdrant_storage/collections/image-prompt-outputs/0/: replica_state.json
scripts/: deploy.sh  purge_modules.sh
