[package]
name = "pantha-vector-storage"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "crates/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hnsw_rs = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
axum = "0.7"
actix-web = "4.12.1"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
] }
